try to enable hdf5 in build

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,6 +38,7 @@ requirements:
         - swig
         - doxygen
         - gsl
+        - hdf5
         # - trilinos  # needs newer trilinos
     run:
         - openmpi
