--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,6 +16,7 @@ source:
         - gsl.patch
         - python.patch
         - colin_boost170.patch
+        - test.patch
 
 build:
     number: 1
