add test-file to test blas/numpy compatibility (#9)
* add test-file to test blas/numpy compatibility

* Try netlib

* MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.4.8, and conda-forge-pinning 2019.09.08

* use openblas in test-env

* Update meta.yaml

* Add liblapack

* MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.4.8, and conda-forge-pinning 2019.09.08

* MNT: Re-rendered with conda-build 3.18.9, conda-smithy 3.6.0, and conda-forge-pinning 2019.10.11

* use openblas  for build

* Update linux_python3.7.yaml

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,8 +1,8 @@
 libblas:
-  - 3.8 *openblas
+  - 3.8 *netlib
 libcblas:
-  - 3.8 *openblas
+  - 3.8 *netlib
 liblapack:
-  - 3.8.0 *openblas
+  - 3.8.0 *netlib
 liblapacke:
-  - 3.8.0 *openblas
+  - 3.8.0 *netlib
