use compiler version 7

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "dakota" %}
-{% set version = "6.14" %}
-{% set sha256sum = "bca9448ebbcc5a29226eab2abbd9e5e87ccaef6818658edb64588f234bf7bd1b" %}
+{% set version = "6.14.0" %}
+{% set sha256sum = "c3479ce49fc7a79df529ed052e809e4af2755f907734c802ccd609bbee220f8c" %}
 
 package:
   name: {{ name }}
@@ -8,7 +8,7 @@ package:
 
 source:
   fn: dakota{{ version }}.tar.gz
-  url: https://dakota.sandia.gov/sites/default/files/distributions/public/dakota-{{ version }}-release-public.src.tar.gz
+  url: https://dakota.sandia.gov/sites/default/files/distributions/public/dakota-{{ version }}-release-public-src-cli.tar.gz
   sha256: {{ sha256sum }}
   patches:
     - surfpack_py_bindings.patch
