--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "dakota" %}
-{% set version = "6.14.0" %}
-{% set sha256sum = "c3479ce49fc7a79df529ed052e809e4af2755f907734c802ccd609bbee220f8c" %}
+{% set version = "6.15.0" %}
 
 package:
   name: {{ name }}
@@ -8,13 +7,13 @@ package:
 
 source:
   fn: dakota{{ version }}.tar.gz
-  url: https://dakota.sandia.gov/sites/default/files/distributions/public/dakota-{{ version }}-release-public-src-cli.tar.gz
-  sha256: {{ sha256sum }}
+  url: https://dakota.sandia.gov/sites/default/files/distributions/public/dakota-{{ version }}-public-rhel7.Linux_.x86_64-cli.tar.gz
+  sha256: c9a163c64c0e971e0e7476b65f452a5ce6f3bc9ef3386ad61fd0f979f1dbfc14
   patches:
-    - surfpack_py_bindings.patch
-    - python.patch
-    - tests.patch
-    - link_librt.patch
+    # - surfpack_py_bindings.patch
+    # - python.patch
+    # - tests.patch
+    # - link_librt.patch
     # - use_external_pybind11.patch
 
 build:
@@ -53,12 +52,10 @@ test:
     - rosenbrock.py
   requires:
     - perl
-    - liblapack 3.8 *openblas
   imports:
     - dakota
     - dakota.interfacing
     - dakota.interfacing.dprepro
-    - pysurfpack
   commands:
     - $PREFIX/share/dakota/test/dakota_test.perl --label-regex=AcceptanceTest
     - dakota -i UQ.in
