--- a/.ci_support/linux_64_numpy1.19python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_numpy1.19python3.8.____cpython.yaml
@@ -3,7 +3,7 @@ boost_cpp:
 c_compiler:
 - gcc
 c_compiler_version:
-- '7'
+- '10'
 cdt_name:
 - cos6
 channel_sources:
@@ -13,23 +13,23 @@ channel_targets:
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '7'
+- '10'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '7'
+- '10'
 gsl:
 - '2.7'
 hdf5:
 - 1.10.6
 libblas:
-- 3.8 *openblas
+- 3.8 *netlib
 libcblas:
-- 3.8 *openblas
+- 3.8 *netlib
 liblapack:
-- 3.8.0 *openblas
+- 3.8 *netlib
 numpy:
 - '1.19'
 openmpi:
