--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
     # - surfpack_py_bindings.patch
     # - python.patch
     # - tests.patch
-    # - link_librt.patch
+    - link_librt.patch
     # - use_external_pybind11.patch
 
 build:
