--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: 49684ade2a937465d85b0fc69c96408be38bc1603ed2e7e8156d93eee3567d2f
   patches:
     # - patches/surfpack_py_bindings.patch
-    # - patches/python.patch
+    - patches/python.patch
     # - patches/tests.patch
     - patches/link_librt.patch
     # - patches/use_external_pybind11.patch
