--- a/.ci_support/linux_64_blas_implmklnumpy1.20python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_blas_implmklnumpy1.20python3.8.____cpython.yaml
@@ -1,35 +1,33 @@
+blas_impl:
+- mkl
 boost_cpp:
 - 1.78.0
 c_compiler:
 - gcc
 c_compiler_version:
-- '10'
+- '11'
 cdt_name:
 - cos6
 channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+curl:
+- '7'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
-- '10'
+- '11'
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '10'
+- '11'
 gsl:
 - '2.7'
 hdf5:
 - 1.12.1
-libblas:
-- 3.9 *netlib
-libcblas:
-- 3.9 *netlib
-liblapack:
-- 3.9 *netlib
 numpy:
 - '1.20'
 openmpi:
@@ -43,7 +41,7 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.8.* *_cpython
 target_platform:
 - linux-64
 zip_keys:
