--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -66,7 +66,7 @@ test:
 
 about:
   home: https://dakota.sandia.gov
-  license: LGPL-3.0
+  license: LGPL-2.1-or-later
   license_family: LGPL
   license_file: LICENSE
   summary: The Dakota project delivers software for optimization and uncertainty quantification.
