--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,6 +32,9 @@ requirements:
     - openmpi
     # - pybind11
     - boost-cpp
+    - libblas * *{{ blas_impl }}
+    - libcblas * *{{ blas_impl }}
+    - liblapack * *{{ blas_impl }}
     - {{ blas_impl }}
     - python
     - perl
