try removing blas_impl matrix for 6.17

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -36,10 +36,9 @@ requirements:
     - openmpi
     # - pybind11
     - boost-cpp
-    - libblas * *{{ blas_impl }}
-    - libcblas * *{{ blas_impl }}
+    - libblas
+    - libcblas
     - liblapack
-    - {{ blas_impl }}
     - python
     - perl
     - numpy
@@ -49,10 +48,6 @@ requirements:
     - hdf5
         # - trilinos  # needs newer trilinos
   run:
-    - libblas * *{{ blas_impl }}
-    - libcblas * *{{ blas_impl }}
-    - liblapack
-    - {{ blas_impl }}
     - boost-cpp
     - python
     - {{ pin_compatible("numpy") }}
