make linter happy with blas_impl
by providing a default value that gets used during lint as suggested
by @isuruf in https://github.com/conda-forge/conda-smithy/pull/1702#pullrequestreview-1212330903

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,10 @@
 {% set name = "dakota" %}
 {% set version = "6.16.0" %}
 
+{% if blas_impl is undefined %}
+{% set blas_impl = "openblas" %}
+{% endif %}
+
 package:
   name: {{ name }}
   version: {{ version }}
