Revert "try removing blas_impl matrix for 6.17"
This reverts commit 9353efc6f66d979249b0e4765807f5a3facbf51e.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,9 +35,10 @@ requirements:
     - openmpi
     # - pybind11
     - boost-cpp
-    - libblas
-    - libcblas
+    - libblas * *{{ blas_impl }}
+    - libcblas * *{{ blas_impl }}
     - liblapack
+    - {{ blas_impl }}
     - python
     - perl
     - numpy
@@ -47,6 +48,10 @@ requirements:
     - hdf5
         # - trilinos  # needs newer trilinos
   run:
+    - libblas * *{{ blas_impl }}
+    - libcblas * *{{ blas_impl }}
+    - liblapack
+    - {{ blas_impl }}
     - boost-cpp
     - python
     - {{ pin_compatible("numpy") }}
