MNT: Re-rendered with conda-build 3.23.1, conda-smithy 3.22.1.post.dev3, and conda-forge-pinning 2022.12.19.20.52.42

--- a/.ci_support/linux_64_blas_implmklnumpy1.21python3.10.____cpython.yaml
+++ b/.ci_support/linux_64_blas_implmklnumpy1.21python3.10.____cpython.yaml
@@ -1,3 +1,5 @@
+blas_impl:
+- mkl
 boost_cpp:
 - 1.78.0
 c_compiler:
@@ -24,10 +26,6 @@ gsl:
 - '2.7'
 hdf5:
 - 1.12.1
-libblas:
-- 3.9 *netlib
-libcblas:
-- 3.9 *netlib
 liblapack:
 - 3.9 *netlib
 numpy:
