--- a/.ci_support/linux_64_blas_implmklnumpy1.20python3.8.____cpython.yaml
+++ b/.ci_support/linux_64_blas_implmklnumpy1.20python3.8.____cpython.yaml
@@ -1,3 +1,5 @@
+blas_impl:
+- mkl
 boost_cpp:
 - 1.78.0
 c_compiler:
@@ -24,10 +26,6 @@ gsl:
 - '2.7'
 hdf5:
 - 1.12.1
-libblas:
-- 3.9 *netlib
-libcblas:
-- 3.9 *netlib
 liblapack:
 - 3.9 *netlib
 numpy:
@@ -43,7 +41,7 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- 3.9.* *_cpython
+- 3.8.* *_cpython
 target_platform:
 - linux-64
 zip_keys:
