--- a/.ci_support/linux_64_blas_implblisnumpy1.21python3.10.____cpython.yaml
+++ b/.ci_support/linux_64_blas_implblisnumpy1.21python3.10.____cpython.yaml
@@ -12,6 +12,8 @@ channel_sources:
 - conda-forge
 channel_targets:
 - conda-forge main
+curl:
+- '7'
 cxx_compiler:
 - gxx
 cxx_compiler_version:
@@ -25,9 +27,7 @@ fortran_compiler_version:
 gsl:
 - '2.7'
 hdf5:
-- 1.12.2
-liblapack:
-- 3.9 *netlib
+- 1.12.1
 numpy:
 - '1.21'
 openmpi:
